--- a/resources/js/locales/es.json
+++ b/resources/js/locales/es.json
@@ -104,7 +104,72 @@
     "newPassword": "Nueva Contraseña",
     "confirmPassword": "Confirmar Contraseña",
     "updateProfile": "Actualizar Perfil",
-    "deleteAccount": "Eliminar Cuenta"
+    "deleteAccount": "Eliminar Cuenta",
+    "information": {
+      "title": "Información del Perfil",
+      "description": "Actualiza la información de tu cuenta y dirección de correo electrónico.",
+      "saved": "Guardado.",
+      "nameLabel": "Nombre",
+      "namePlaceholder": "Tu Nombre",
+      "emailLabel": "Correo Electrónico",
+      "emailPlaceholder": "tu.correo@ejemplo.com",
+      "emailUnverified": "Tu dirección de correo electrónico no está verificada. Por favor verif ícala para acceder a todas las funciones.",
+      "sendVerification": "Enviar Correo de Verificación",
+      "verificationSent": "Se ha enviado un nuevo enlace de verificación a tu dirección de correo electrónico.",
+      "applicationLanguage": "Idioma de la Aplicación",
+      "languageDescription": "Selecciona tu idioma preferido para la interfaz de la aplicación."
+    },
+    "statistics": {
+      "title": "Estadísticas de la Cuenta",
+      "description": "Resumen de la actividad y estado de tu cuenta.",
+      "memberSince": "Miembro Desde",
+      "daysActive": "Días Activo",
+      "days": "días",
+      "accountStatus": "Estado de la Cuenta",
+      "active": "Activa",
+      "emailStatus": "Estado del Correo",
+      "verified": "Verificado",
+      "unverified": "No Verificado"
+    },
+    "connectedAccounts": {
+      "title": "Cuentas Sociales Conectadas",
+      "description": "Administra tus perfiles de redes sociales conectados para publicación de contenido.",
+      "connected": "Conectado",
+      "notConnected": "No Conectado",
+      "manageLink": "Administrar conexiones en el Gestor de Contenido"
+    },
+    "password": {
+      "title": "Actualizar Contraseña",
+      "description": "Mantén tu cuenta segura con una contraseña fuerte",
+      "currentPassword": "Contraseña Actual",
+      "newPassword": "Nueva Contraseña",
+      "confirmPassword": "Confirmar Nueva Contraseña",
+      "updateButton": "Actualizar Contraseña",
+      "successTitle": "¡Contraseña actualizada exitosamente!",
+      "successMessage": "La seguridad de tu cuenta ha sido mejorada.",
+      "errorTitle": "Por favor corrige los siguientes errores:",
+      "securityTips": "Consejos de Seguridad para Contraseñas:",
+      "tip1": "Usa al menos 8 caracteres con una mezcla de letras, números y símbolos",
+      "tip2": "Evita usar información personal o palabras comunes",
+      "tip3": "Considera usar un administrador de contraseñas para mayor seguridad",
+      "placeholders": {
+        "current": "Ingresa tu contraseña actual",
+        "new": "Ingresa tu nueva contraseña",
+        "confirm": "Confirma tu nueva contraseña"
+      }
+    },
+    "delete": {
+      "title": "Eliminar Cuenta",
+      "description": "Eliminar permanentemente tu cuenta y datos",
+      "warningTitle": "Advertencia: Acción Irreversible",
+      "warningMessage": "Una vez que tu cuenta sea eliminada, todos sus recursos y datos serán eliminados permanentemente. Antes de eliminar tu cuenta, por favor descarga cualquier dato o información que desees conservar.",
+      "deleteButton": "Eliminar Cuenta",
+      "confirmTitle": "¿Estás seguro de que quieres eliminar tu cuenta?",
+      "confirmMessage": "Por favor ingresa tu contraseña para confirmar que deseas eliminar permanentemente tu cuenta.",
+      "passwordLabel": "Contraseña",
+      "passwordPlaceholder": "Ingresa tu contraseña para confirmar",
+      "cancel": "Cancelar"
+    }
   },
   "auth": {
     "login": "Iniciar Sesión",
