--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -194,14 +194,37 @@
     }
   },
   "auth": {
-    "login": "Login",
-    "register": "Register",
-    "logout": "Logout",
+    "login": {
+      "title": "Login",
+      "welcome": "Welcome",
+      "subtitle": "Start session with your email and password",
+      "email": "Email",
+      "password": "Password",
+      "loginButton": "Login",
+      "loggingIn": "Logging in...",
+      "orContinueWith": "Or continue with",
+      "google": "Google",
+      "noAccount": "Don't have an account?",
+      "registerLink": "Register"
+    },
+    "register": {
+      "title": "Register",
+      "welcome": "Welcome",
+      "subtitle": "Register with your email and password",
+      "name": "Name",
+      "email": "Email",
+      "password": "Password",
+      "confirmPassword": "Confirm Password",
+      "registerButton": "Register",
+      "registering": "Registering...",
+      "orContinueWith": "Or continue with",
+      "google": "Google",
+      "alreadyRegistered": "Already registered?",
+      "loginLink": "Login"
+    },
     "forgotPassword": "Forgot Password?",
     "resetPassword": "Reset Password",
-    "rememberMe": "Remember Me",
-    "alreadyRegistered": "Already registered?",
-    "notRegistered": "Not registered yet?"
+    "rememberMe": "Remember Me"
   },
   "verification": {
     "banner": {
