feat: implement full authentication flow with welcome page, common components, and localization.

--- a/resources/js/locales/es.json
+++ b/resources/js/locales/es.json
@@ -21,7 +21,8 @@
     "perPage": "por página",
     "noResults": "No se encontraron resultados",
     "search": "Buscar por nombre",
-    "processing": "Procesando..."
+    "processing": "Procesando...",
+    "noCreditCard": "No requiere tarjeta de crédito"
   },
   "nav": {
     "dashboard": "Panel",
@@ -37,6 +38,20 @@
     "subtitle": "Organiza, optimiza y programa tu contenido multimedia con herramientas impulsadas por IA para maximizar tu presencia en redes sociales.",
     "featured": "Destacado",
     "featuredCollection": "Colección Destacada",
+    "startFree": "Comienza gratis",
+    "demo": "Demo",
+    "beta": "Beta",
+    "featuresTitle": "Características",
+    "featuresSubtitle": "Gestiona tu contenido con herramientas impulsadas por IA",
+    "login": "Iniciar Sesión",
+    "getStarted": "Comienza Ahora",
+    "readyToStart": "Listo para comenzar",
+    "joinNow": "Únete Ahora",
+    "createAccount": "Crea una Cuenta",
+    "noCreditCard": "No requiere tarjeta de crédito",
+    "privacy": "Política de Privacidad",
+    "terms": "Términos de Servicio",
+    "contact": "Contacto",
     "aiOrganization": {
       "title": "Organización con IA",
       "description": "Categoriza, etiqueta y busca fácilmente tus archivos multimedia con organización impulsada por IA",
@@ -57,6 +72,47 @@
     "scheduling": {
       "title": "Programación Inteligente",
       "description": "Automatiza y programa tus publicaciones con recomendaciones de IA para un rendimiento óptimo"
+    },
+    "pricing": {
+      "title": "Precios",
+      "description": "Obtén información sobre el engagement de tu contenido y optimiza tu estrategia en consecuencia"
+    },
+    "contentManagement": {
+      "title": "Gestión de Contenido",
+      "description": "Gestiona tu contenido con herramientas impulsadas por IA"
+    },
+    "socialIntegration": {
+      "title": "Integración Social",
+      "description": "Integra tus cuentas de redes sociales con herramientas impulsadas por IA"
+    },
+    "aiTools": {
+      "title": "Herramientas IA",
+      "description": "Chat con IA para obtener respuestas a tus preguntas"
+    },
+     "tags": {
+      "multimedia": "Multimedia",
+      "organization": "Organización",
+      "advanced_search": "Búsqueda Avanzada",
+      "tags": "Etiquetas",
+      "facebook": "Facebook",
+      "instagram": "Instagram",
+      "tiktok": "TikTok",
+      "youtube": "YouTube",
+      "twitter": "Twitter",
+      "calendar": "Calendario",
+      "scheduling": "Programación",
+      "ai": "IA",
+      "optimal_times": "Horas Optimas",
+      "hashtags": "Hashtags",
+      "recommendations": "Recomendaciones",
+      "optimization": "Optimización",
+      "ai_analysis": "Análisis IA",
+      "collections": "Colecciones",
+      "filters": "Filtros",
+      "auto_post": "Auto-Post",
+      "time_zones": "Zonas Horarias",
+      "search": "Búsqueda",
+      "queue": "Cola"
     }
   },
   "dashboard": {
