feat: Initialize frontend application with React, Inertia, Tailwind, Firebase authentication, and i18n.

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -298,7 +298,11 @@
       "orContinueWith": "Or continue with",
       "google": "Google",
       "alreadyRegistered": "Already registered?",
-      "loginLink": "Login"
+      "loginLink": "Login",
+       "tags": {
+        "freeForever": "Gratis por siempre",
+        "noCreditCard":"No requiere tarjeta de crédito" 
+      }
     },
     "forgotPassword": "Forgot Password?",
     "resetPassword": "Reset Password",
