--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -313,38 +313,139 @@
     "login": {
       "title": "Login",
       "welcome": "Welcome",
-      "subtitle": "Start session with your email and password",
-      "email": "Email",
-      "password": "Password",
-      "loginButton": "Login",
-      "loggingIn": "Logging in...",
+      "subtitle": "Sign in to your account to continue",
       "orContinueWith": "Or continue with",
-      "google": "Google",
       "noAccount": "Don't have an account?",
-      "registerLink": "Register"
+      "tags": {
+        "secureAccess":{
+          "title":"Secure Access",
+          "subtitle":"Make sure you enter the correct email address."
+        },
+        "endToEndEncryption":{
+          "title":"End-to-End Encryption",
+          "subtitle":"Your data is encrypted from end to end."
+        },
+        "globalPlatform":{
+          "title":"Global Platform",
+          "subtitle":"Access your account from anywhere in the world."
+        },
+        "mobileFriendly":{
+          "title":"Mobile Friendly",
+          "subtitle":"Responsive design"
+        },
+        "secureProcess": "Secure Process",
+        "privacyPolicy": "Privacy Policy"
+      },
+      "inputs": {
+        "email": "Email Address",
+        "password": "Password"
+      },
+      "buttons": {
+        "send": "Send email",
+        "sending": "Sending email ...",
+        "back": "Return to login page",
+        "rememberMe": "Remember me",
+        "forgotPassword": "Forgot Password",
+        "registerLink": "Register",
+        "login": "Login",
+        "loggingIn": "Logging in...",
+        "google": "Google"
+      },
+      "placeholders": {
+        "email": "prueba@email.com",
+        "password": "••••••••"
+      }
     },
     "register": {
       "title": "Register",
       "welcome": "Welcome",
-      "subtitle": "Register with your email and password",
-      "name": "Name",
-      "email": "Email",
-      "password": "Password",
-      "confirmPassword": "Confirm Password",
-      "registerButton": "Register",
-      "registering": "Registering...",
+      "subtitle": "Enter your details to create an account ",
+      "alreadyRegistered": "Already have an account?",
       "orContinueWith": "Or continue with",
-      "google": "Google",
-      "alreadyRegistered": "Already registered?",
-      "loginLink": "Login",
+      "agreeWith": "I agree to the",
+      "and": "and",
        "tags": {
-        "freeForever": "Gratis por siempre",
-        "noCreditCard":"No requiere tarjeta de crédito" 
+        "freeForever":
+        {
+          "title": "Free Forever",
+          "subtitle": "No credit card required"
+        },
+        "secureByDefault":
+        {
+          "title": "Secure by Default",
+          "subtitle": "Security of entreprise grade"
+        },
+        "syncEverywhere": 
+        {
+          "title": "Sync Everywhere",
+          "subtitle": "Sync your data on all devices"
+        }
+      },
+      "inputs": {
+        "name": "Name",
+        "email": "Email Address",
+        "password": "Password",
+        "confirmPassword": "Confirm Password"
+      },
+      "buttons": {
+        "register": "Register",
+        "registering": "Registering...",
+        "login": "Return to login ",
+        "google": "Google",
+        "privacyPolicy": "Privacy Policy",
+        "termsAndConditions": "Terms and Conditions"
+      },
+      "placeholders": {
+        "name": "joseh clark",
+        "email": "prueba@gmail.com",
+        "password": "••••••••",
+        "confirmPassword": "••••••••"
       }
     },
-    "forgotPassword": "Forgot Password?",
-    "resetPassword": "Reset Password",
-    "rememberMe": "Remember Me"
+     "forgot-password": {
+      "welcome": "Welcome",
+      "title": "Forgot Password",
+      "enterEmail": "Enter your email",
+      "subtitle": "Reset your password with your email",
+      "description": "Forgot your password? No problem. Just enter your email address below and we'll email you a password reset link that will allow you to choose a new one.",
+      "secureProcess": "Secure Process",
+      "privacyPolicy": "Privacy Policy",
+      "tags": {
+        "1":{
+          "title":"Enter your email",
+          "subtitle":"Make sure you enter the correct email address."
+        },
+        "2":{
+          "title":"Check your email",
+          "subtitle":"Look for the email we just sent."
+        },
+        "3":{
+          "title":"Create a new password",
+          "subtitle":"Create a strong password you can remember easily."
+        },
+        "secureProcess": "Secure Process",
+        "privacyPolicy": "Privacy Policy"
+      },
+      "inputs": {
+        "email": "Email Address"
+      },
+      "buttons": {
+        "send": "Send email",
+        "sending": "Sending email ...",
+        "back": "Return to login page"
+      },
+      "placeholders": {
+        "email": "prueba@email.com"
+      },
+      "recomendations":
+      {
+        "receiveEmail":"Didn't receive the email?",
+        "1": "Check your spam folder",
+        "2": " Make sure you entered the correct emai",
+        "3": "Wait a few minutes and try again"
+      }
+    },
+    "returnToLogin": "Return to Login"
   },
   "verification": {
     "banner": {
